# SandyShoreShowdown

./: .gitignore  CMakeLists.txt  README.md
source_assets/: New Plank.ase  Plank Pressed With Text.ase  Plank Pressed.ase  Plank With Text.ase
src/: build.sh  gameTest  test.c
src/assets/sounds/: Glove.m4a  Paper.m4a  cardboard.m4a
